# rle-vm

./: .gitignore  CMakeLists.txt  README.md  grammar.md
src/dbg/: CMakeLists.txt  controller.cpp  controller.hpp  main.cpp
src/dbg/qml/: IntrospectLabels.qml  MachineStack.qml  ProgramViewer.qml  main.qml
src/front/: lexer.cpp  lexer.hpp  token.cpp  token.hpp
src/sdk/: assembler.cpp  tokenizer.cpp
src/vm/: argument.hpp  constants.hpp  definitions.cpp  definitions.hpp  instruction.hpp  module.hpp  vm.cpp  vm.hpp
src/vm/insts/: add.cpp  add.hpp  halt.hpp  jump.hpp  jumpz.hpp  leq.hpp  load.hpp  loadc.hpp  mul.hpp  neg.hpp  pop.hpp  store.hpp
tests/syntax/: add.asm  basic.asm  labels.asm  simple.asm
